--- a/ProgramingStudy/packages.config
+++ b/ProgramingStudy/packages.config
@@ -25,5 +25,5 @@
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
   <package id="System.Text.Encoding.CodePages" version="4.5.1" targetFramework="net461" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net461" />
-  <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" requireReinstallation="true" />
 </packages>
